Fixed the misalignment of elements in the project cards, Changed the order of the Prime Factorial's tech stack

--- a/src/App.css
+++ b/src/App.css
@@ -239,16 +239,19 @@ button:hover {
   align-items: center; 
   justify-content: flex-start; 
   border: 1px solid #d2d0d0;
-  height: 600px;
-  gap: 1rem;
+  /* height: 600px; */
+  height: auto;
+  gap: 0.5rem;
 }
 
 .project-text-content {
-  flex-grow: 1; 
-  overflow-y: auto; 
-  min-height: 0; 
-  padding: 0 1rem; 
+  /* flex-grow: 1;  */
   width: 100%;
+  height: 150px; 
+  min-height: 0; 
+  overflow-y: auto; 
+  padding: 0 1rem; 
+  margin-bottom: 1rem;
 }
 
 .project-card h2 {
@@ -290,6 +293,11 @@ h4 {
   margin-right: 0.5rem;
 }
 
+.button-wrapper {
+    margin-top: auto; 
+    text-decoration: none;
+}
+
 .view-demo-button {
   background-color: var(--color-secondary);
   color: var(--color-white);
@@ -304,7 +312,9 @@ h4 {
 
 .thumbnail {
   width: 100%;
-  height: auto;
+  height: 100%;
+  object-fit: cover; 
+  object-position: center center;
   cursor: pointer;
   transition: opacity 0.3s ease;
 }
@@ -331,6 +341,12 @@ h4 {
 .iframe-container {
   position: relative;
   width: 100%;
+
+  height: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
 }
 
 .iframe-container img {
@@ -449,6 +465,10 @@ h4 {
     /* font-size: 0.9rem; */
     padding-left: 1rem;
     padding-right: 1rem;
+  }
+  
+  .iframe-container {
+    height: 200px;
   }
 
   .view-demo-button {
